Añadiendo funcionalidad a los botones para imprimir el valor y para borrar el ultimo o todos los valores

--- a/calculadora.html
+++ b/calculadora.html
@@ -11,9 +11,9 @@
     <div class="calc-container">
         <h2>CALCULADORA ONLINE</h2>
 
-        <input type="text">
+        <input type="text" id="result-field">
 
-        <div class="btn-container">
+        <div id="btn-container">
             <button>1</button>
             <button>2</button>
             <button>3</button>
@@ -29,6 +29,8 @@
             <button>-</button>
             <button>*</button>
             <button>/</button>
+            <button><-</button>
+            <button>clean</button>
             <button>=</button>
         </div>
     </div>
