--- a/calculadora.html
+++ b/calculadora.html
@@ -8,8 +8,8 @@
     <link rel='stylesheet' type='text/css' media='screen' href='calculadora.css'>
 </head>
 <body>
-    <div class="calc-container">
-        <h2>CALCULADORA ONLINE</h2>
+    <div class="calculadora-container">
+        <h2 id="title">CALCULADORA ONLINE</h2>
 
         <input type="text" id="result-field">
 
@@ -17,21 +17,29 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
+            <button>+</button>
+
             <button>4</button>
             <button>5</button>
             <button>6</button>
+            <button>-</button>
+
+
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>0</button>
+            <button>×</button>
 
-            <button>+</button>
-            <button>-</button>
-            <button>*</button>
-            <button>/</button>
-            <button><-</button>
-            <button>clean</button>
+
+            <button>0</button>
+            <button>.</button>
+            <button>÷</button>
             <button>=</button>
+
+            <button>clean</button>
+            <button>←</button>
+            
+            
         </div>
     </div>
 
