mejorando el diseño css

--- a/calculadora.html
+++ b/calculadora.html
@@ -11,33 +11,33 @@
     <div class="calculadora-container">
         <h2 id="title">CALCULADORA ONLINE</h2>
 
-        <input type="text" id="result-field">
+        <input type="text" id="result-field" readonly>
 
         <div id="btn-container">
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>+</button>
+            <button class="btn-side">+</button>
 
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button class="btn-side">-</button>
 
 
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>×</button>
+            <button class="btn-side">×</button>
 
 
             <button>0</button>
             <button>.</button>
             <button>÷</button>
-            <button>=</button>
+            <button class="btn-side">=</button>
 
-            <button>clean</button>
-            <button>←</button>
+            <button class="btn-side">clean</button>
+            <button class="btn-side">←</button>
             
             
         </div>
